--- a/app/views/synthroom/index.html.erb
+++ b/app/views/synthroom/index.html.erb
@@ -1,1 +1,1 @@
-<div data-props="{ "test": "test" }"></div>
+<div data-props='[{"id":1,"name":"name of obj1"},{"id":2,"name":"name of obj2"},{"id":3,"name":"name of obj3"}]'></div>
