--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -6,7 +6,12 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'hello_react' %>
+
+    <script>
+      window.JSDATA = <%= raw(render partial: 'layouts/jsdata') %>;
+    </script>
+
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
